:construction_worker: add infinite scroll friendly endpoint
